# uGUIDE

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  usage.html
.github/workflows/: documentation.yml
_sources/: usage.rst.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
examples/: bvals.bval  config.pkl  simulations_SM_test_1000__S_snr_50.csv  simulations_SM_test_1000__f_Da_ODI_u0_u1.csv  simulations_SM_train_10000__f_Da_ODI_u0_u1.csv  uGUIDE_SM_inference.ipynb  uGUIDE_SM_inference.py  uGUIDE_SM_inference_parser.py
uGUIDE/: __init__.py  config_utils.py  data_utils.py  dataset.py  density_estimator.py  embedded_net.py  estimation.py  inference.py  normalization.py  plot_utils.py  training.py  utils.py
